Version 6.1.1
- lots of bug fixes merged up from 6.0.5
- fixed website config wizard so that it shows for all web types

Version 6.1.0
- Added new MySQL Website Configuration Wizard
- Now supports native inout and output parameters when in prepared mode and running against a server
  that supports it
- Changed our native guid support to char(32)
- Added a connection string option 'old guids=yes|no' to allow users who have older applications
  to continue using binary(16) guids

Version 6.0.5
- fixed memory leak in server when calling stored procedure with output parameter many times 
  in the same session (bug#36027)
- workaround for .NET compact framework problems when writing behind the end of MemoryStream 
(contributed by Nicholas Piasecki) (bug#43736)
- added keepalive connection option that can be used to detect network outages faster 
  and prevent firewalls from dropping idle connections (bug#40684)
- fixed bug where our internal driver was using a batched command even if the user had added
  'allow batch=false' to their connection string (bug #45502)
- we are now throwing an exception when DeriveParameters is unable to successfully populate
  the parameters array.  This exception explains what is wrong (bug #45952)  
- Add "SSL Mode" option for connections that indicates whether to use SSL connections and how
  to validate server certificate. Deprecated use of "encrypt" in connection strings(bug#38700)
- fixed potential infinite loop in LoadPacket(), when read from a stream returns 0. (bug#46308)
- fixed bug where editing a table and giving a size based type that is different than
  the default (i.e. varchar(20)) would cause other columns that have the default
  to fail (bug #46100)
- fixed mono compilation by removing the space delimited warning list from the project file
  and including a solution that builds with MonoDevelop 2.0. (bug #42411)
- fixed 'can't find svctag.xml' installer bug (thanks Iggy!)  (bug #45474)